--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <a class="skip-to-content-link" href="#main">Skip to content</a>
         <header>
             <nav>
                 <ul>
@@ -21,7 +22,7 @@
             </nav>
         </header>
 
-        <main>
+        <main id="main">
             <p>"一个导演，无论他如何标榜自己，其实就干了一件事：他就是拍了一部他自己想看的电影。" ——姜文</p>
             <p>"A director, no matter how he advertises himself, has actually done one thing: he just made a movie he wanted to see. ——Jiang Wen"</p>
             <figure>
@@ -35,7 +36,7 @@
 
         </main>
 
-        <footer>
+        <footer id="footer">
             &copy; 2022
         </footer>
     </body>
