--- a/awards.html
+++ b/awards.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="">
+        <link rel="icon" href="img/favicon.jpg">
         <link rel="stylesheet" href="css/html5reset.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Awards</title>
     </head>
 
     <body>
+        <a class="skip-to-content-link" href="#main">Skip to content</a>
         <header>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="films.html">Films</a></li>
-                    <li><a href="awards.html">Awards</a></li>
+                    <li class="active"><a href="awards.html">Awards</a></li>
                     <li><a href="moreInfo.html">More Info</a></li>
                 </ul>
             </nav>
